--- a/pdd_project_SM/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/pdd_project_SM/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -76,11 +76,11 @@ DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 
 [MRU]
-MRUItem0=/Game/FirstPersonBP/Maps/mainmenu
-MRUItem1=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+MRUItem0=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+MRUItem1=/Game/FirstPersonBP/Maps/mainmenu
 
 [EditorStartup]
-LastLevel=/Game/FirstPersonBP/Maps/mainmenu
+LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [AssetEditorSubsystem]
 CleanShutdown=True
@@ -464,6 +464,7 @@ TextBlock.Behavior=True
 TextBlock.Render Transform=True
 TextBlock.Navigation=True
 TextBlock.Localization=True
+TextBlock.Clipping=True
 
 [ContentBrowserRecent]
 MRUItem0=/Game/FirstPersonBP/Maps/Mainmenuu
