очень сильно пыталась запрограммировать кнопки
но у меня не получилось вроде как

--- a/pdd_project_SM/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/pdd_project_SM/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -161,6 +161,8 @@ ContentBrowserTab1.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/FirstPersonBP/Maps
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
+ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
+ToolbarOpenBPClass.CurrentViewType=0
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -465,12 +467,32 @@ TextBlock.Render Transform=True
 TextBlock.Navigation=True
 TextBlock.Localization=True
 TextBlock.Clipping=True
+FirstPersonExampleMap_C.Tick=True
+FirstPersonExampleMap_C.Replication=True
+FirstPersonExampleMap_C.Actor=True
+FirstPersonExampleMap_C.Input=True
+Mainmenuu_C.Appearance=True
+Mainmenuu_C.Designer=True
+Mainmenuu_C.Input=True
+Mainmenuu_C.Interaction=True
+Mainmenuu_C.Performance=True
+Mainmenuu_C.Layout=True
+Mainmenuu_C.Behavior=True
+Mainmenuu_C.Render Transform=True
+Mainmenuu_C.Accessibility=True
+Mainmenuu_C.Clipping=True
+Mainmenuu_C.Navigation=True
+Mainmenuu_C.Localization=True
+EdGraph.Graph=True
+PropertyWrapper.Variable=True
+PanelWidget.Layout=True
 
 [ContentBrowserRecent]
 MRUItem0=/Game/FirstPersonBP/Maps/Mainmenuu
-MRUItem1=/Game/FirstPersonBP/Maps/mainmenu
-MRUItem2=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode
-MRUItem3=/Game/krytayapapka/FirstPersonGameMode
+MRUItem1=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+MRUItem2=/Game/FirstPersonBP/Maps/mainmenu
+MRUItem3=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode
+MRUItem4=/Game/krytayapapka/FirstPersonGameMode
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1367,10 +1389,13 @@ ExternalImagePicker.TimeStamp=2021.09.06-05.08.41
 ExternalImagePicker.LastCompileMethod=Unknown
 SequencerWidgets.TimeStamp=2021.09.06-05.08.48
 SequencerWidgets.LastCompileMethod=Unknown
+HierarchicalLODUtilities.TimeStamp=2021.09.06-05.08.42
+HierarchicalLODUtilities.LastCompileMethod=Unknown
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPersonBP/Blueprints/FirstPersonGameMode.FirstPersonGameMode=1
 /Game/FirstPersonBP/Maps/Mainmenuu.Mainmenuu=1
+/Game/FirstPersonBP/Maps/FirstPersonExampleMap.FirstPersonExampleMap:PersistentLevel.FirstPersonExampleMap=1
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
@@ -1400,14 +1425,16 @@ PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 CanvasPanel="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-PanelWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Visual="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Object="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" \"Object.Render Transform.RenderTransform\" "
+Object="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" \"Object.Render Transform.RenderTransform\" "
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" \"Object.Render Transform.RenderTransform\" "
 ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" \"Object.Render Transform.RenderTransform\" "
 TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Font.OutlineSettings.OutlineColor\" \"Object.Appearance.StrikeBrush\" \"Object.Appearance.StrikeBrush.TintColor\" \"Object.Appearance.ShadowColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Font.OutlineSettings.OutlineColor\" \"Object.Appearance.StrikeBrush\" \"Object.Appearance.StrikeBrush.TintColor\" \"Object.Appearance.ShadowColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Mainmenuu_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+UserWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -1467,4 +1494,12 @@ bCompileDirectorOnEvaluate=False
 TrajectoryPathCap=250
 bShowOutlinerInfoColumn=True
 FrameNumberDisplayFormat=Seconds
+
+[LightingBuildOptions]
+OnlyBuildSelected=False
+OnlyBuildSelectedLevels=False
+OnlyBuildVisibility=False
+
+[MessageLog]
+LastLogListing=BlueprintLog
 
